@@ -34,7 +34,7 @@ exec sql end declare section;
 	/* will close "second" */
 	exec sql disconnect DEFAULT;
 
-	exec sql connect to REGRESSDB1 as second;
+	exec sql connect to "connectdb" as second;
 	exec sql disconnect ALL;
 
 	exec sql disconnect CURRENT;
